# libmtpipe

./: .gitignore  .gitmodules  MIT-LICENSE.txt  MTPipeline.podspec  Makefile.in  README.md  configure.ac  libmtpipe.podspec
include/: MTPipeline.h  mtpipe.h
src/: MTPipeline.m  Makefile.in  fifo.c  fifo.h  mtpipe.c  pause.c  pause.h  rendezvous.c  rendezvous.h
test/: Makefile.in  main.c
